23 June 2015: Wouter
	- Trunk contains 4.1.4 in development.

4 June 2015: Wouter
	- Tag 4.1.3rc1
	- improve nsd-control usage text. (23 june - added to 4.1.3)
	- RFC7553 RR Type URI support.

2 June 2015: Wouter
	- Fix redefined macro lex warning for freebsd flex.

29 May 2015: Wouter
	- Fix that formerrors are ratelimited.

19 May 2015: Wouter
	- max-interfaces raised to 32.

18 May 2015: Wouter
	- removed unused defines for unofficial tsig-hmac algorithm codes.
	  The TSIG algorithm is identified by name in the config file.

14 May 2015: Wouter
	- hmac sha224, sha384 and sha512 support, patch from David Gwynne.

23 April 2015: Wouter
	- Fix crash in zone parser for relative dname after error in origin.
	- Test for zone parser failures

21 April 2015: Wouter
	- nsd-control addzones and delzones read list of zones from stdin.
	- Fix task and zonestat files to be stored in a subdirectory in tmp
	  to stop privilege elevation.
	- printout names for successful addition and removal with bulk command.

20 April 2015: Wouter
	- Fix #665: when removing subdomain, nsd does not reparse parent zone.

14 April 2015: Wouter
	- trunk contains 4.1.3(upcoming).

7 April 2015: Wouter
	- Tag 4.1.2rc2.

2 April 2015: Wouter
	- Made log message more consistent, changed 'axfr refused' log message
	  to be more consistent with other messages.  Also notify refused.
	- verbosity 2 logs axfr refused and notify refused.
	  verbosity 1 contains less log messages.

31 March 2015: Wouter
	- Tag 4.1.2rc1.

24 March 2015: Wouter
	- Fix #654: Fix contradiction in notify logging verbosity level.
	- Incoming notifies have serial number logged (at verbosity 1).
	- Fix #655: Fix contradiction in verbosity for zone transfers.

17 March 2015: Wouter
	- Use reallocarray for integer overflow protection, patch submitted
	  by Loganaden Velvindron.
	- Fix allocation integer overflow checks.

13 March 2015: Wouter
	- Fix buffer overflow in config parse of domain name,