@@ -5,6 +5,7 @@ NSD RELEASE NOTES
 FEATURES:
 	- RFC7553 RR Type URI support.
 BUG FIXES:
+	- Fix NSID response for short edns sizes.
 
 
 4.1.3
