@@ -191,7 +191,7 @@ query_state_type query_process(query_type *q, nsd_type *nsd);
  * includes the packet header and question section. Space is reserved
  * for the optional EDNS record, if required.
  */
-void query_prepare_response(query_type *q);
+void query_prepare_response(query_type *q, nsd_type* nsd);
 
 /*
  * Add EDNS0 information to the response if required.
@@ -208,10 +208,5 @@ static inline int
 query_overflow(query_type *q)
 {
 	return buffer_position(q->packet) > (q->maxlen - q->reserved_space);
-}
-static inline int
-query_overflow_nsid(query_type *q, uint16_t nsid_len)
-{
-        return buffer_position(q->packet) > (q->maxlen - q->reserved_space - nsid_len);
 }
 #endif /* _QUERY_H_ */
